refactor: rename package name

--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chart",
+  "name": "@onejustone/chart",
   "version": "1.0.1",
   "description": "> TODO: description",
   "author": "chenrong <chenrong03@kuaishou.com>",
@@ -15,5 +15,6 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "753ded7752a04e45dc151fbf738322bee0c43e41"
 }
