--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "commitizen": "^4.2.3",
+    "commitlint-config-cz": "^0.13.2",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
+    "cz-customizable": "^6.3.0",
+    "cz-lerna-changelog": "^2.0.3",
+    "husky": "^5.1.3",
     "lerna": "^3.22.1",
+    "lerna-changelog": "^1.0.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
