--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,24 @@
   "packages": [
     "packages/*"
   ],
+  "comment":{
+    "version": {
+      "conventionalCommits": true,
+      "changelogPreset": {
+        "name": "conventionalcommits",
+        "types": [
+          { "type": "feat", "section": "Features"},
+          {"type": "fix",  "section": "Bug Fixes"},
+          {"type": "docs", "section": "Docs"}
+        ],
+        "issuePrefixes": ["#"],
+        "issueUrlFormat": "{{host}}/{{owner}}/{{repository}}/issues/{{id}}",
+        "commitUrlFormat": "{{host}}/{{owner}}/{{repository}}/commit/{{hash}}",
+        "compareUrlFormat": "{{host}}/{{owner}}/{{repository}}/compare/{{previousTag}}...{{currentTag}}",
+        "userUrlFormat": "{{host}}/{{user}}"
+      }
+    }
+  },
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
