--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "comment":{
+  "command":{
     "version": {
       "conventionalCommits": true,
       "changelogPreset": {
