--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "husky": "^5.1.3",
     "lerna": "^3.22.1",
     "lerna-changelog": "^1.0.1",
+    "scripty": "^2.0.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "scripts": {
+    "packages:chart:build": "scripty --WORD"
+  },
+  "volta": {
+    "node": "14.16.0",
+    "yarn": "1.22.10",
+    "npm": "7.6.3"
   }
 }
